// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField tests should render 1`] = `
.c0 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #4C4C4C;
  background-color: #fff;
  background-image: none;
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  padding: 1px 8px;
}

.c0:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<input
  class="c0 c1"
  type="text"
  value=""
/>
`;

exports[`TextField tests should render in disabled state 1`] = `
.c0 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  display: block;
  height: 22px;
  color: #4C4C4C;
  background-color: #fff;
  background-image: none;
  border: 1px solid #bfbfbf;
  border-radius: 2px;
  padding: 1px 8px;
  cursor: not-allowed;
  background-color: #f3f3f3;
  opacity: 0.65;
}

.c0:-webkit-autofill {
  box-shadow: 0 0 0 1000px white inset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<input
  class="c0 c1"
  disabled=""
  type="text"
  value=""
/>
`;
